# pwr_pea_i

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp  test_instances.txt
data/: data.txt
include/: config.h  result.h  result_writer.h  solvers.h  test_suite.h  tsp_instance.h
src/: config.cpp  result_writer.cpp  solvers.cpp  tsp_instance.cpp
